--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">EDAI1</string>
+    <string name="retrieve_files" />
+    <string name="select_file" />
+    <string name="twice_select" />
+    <string name="upload_file" />
+    <string name="pdf_file_name" />
 </resources>
